Closed Bug 745454 Opened 12 years ago Closed 12 years ago

one-to-many mapping by text-transform:uppercase (e.g. ß) interferes with line-breaking

Categories

(Core :: Layout: Text and Fonts, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: jfkthame, Assigned: jfkthame)

References

Details

(Keywords: intl)

Attachments

(2 files)

When a character is expanded by text-transform:uppercase (applies to ß, but will apply to more characters when bug 744357 is fixed), a preceding line-break opportunity is lost.
Regression window
Last good:
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9b2pre) Gecko/2007110805 Firefox/3.0b2pre ID:2007110805
First bad:
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9b2pre) Gecko/2007110905 Firefox/3.0b2pre ID:2007110905

Bonsai log:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2007-11-08+00%3A00%3A00&maxdate=2007-11-09+05%3A00%3A00&cvsroot=%2Fcvsroot
Looks like the problem is that MergeCharactersInTextRun fails to copy the right CanBreakBefore flag when it sets the merged glyph data in the destination, because by that time the "g" variable is starting out as a copy of the *last* source glyph record, not the first.

This patch resolves that problem, although in testing this I've noticed another line-breaking anomaly as well, which I'll file as a separate bug (it's not limited to the uppercase-ß situation).
Assignee: nobody → jfkthame
Attachment #615081 - Flags: review?(smontagu)
Comment on attachment 615081 [details] [diff] [review]
patch, preserve line-breaks when merging characters from transformed run

Review of attachment 615081 [details] [diff] [review]:
-----------------------------------------------------------------

Makes sense
Attachment #615081 - Flags: review?(smontagu) → review+
https://hg.mozilla.org/mozilla-central/rev/5ac4bfd734aa
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: