bug 745454 - don't lose line-break flag when merging case-transformed characters in text run. r=smontagu